# langchain_restaurante

./: docker-compose.yaml  insert_data.py  pyproject.toml  testes.ipynb
postgres/: Dockerfile
service2/: Dockerfile  app.py
service3/: app.py
