[tool.poetry]
name = "langchain-production-project"
version = "0.1.0"
description = ""
authors = ["Marcus <marcus@pyteam.pro>"]
readme = "README.md"
packages = [{include = "langchain_production_project"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
langchain = "^0.0.300"
openai = "^0.28.0"
fastapi = "^0.103.1"
redis = "^5.0.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
